test/classes/initializers/records/record-no-copy-init-error.good
record-no-copy-init-error.chpl:18: In function 'foo':
record-no-copy-init-error.chpl:28: error: No copy constructor for initializer
